# relay

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  README.md  TODO.md  UNLICENSE  docker-compose.yml  justfile  package.json  pnpm-lock.yaml
contracts/: foundry.toml
contracts/deployments/: local.json
contracts/script/: DeployLocal.s.sol
contracts/src/: ReservationEscrow.sol  ReservationMarketplace.sol  ReservationVerifier.sol
contracts/src/mocks/: MockEmailVerifier.sol  TestReservationVerifier.sol
contracts/test/: ReservationMarketplace.t.sol
crates/mock-relayer/: Cargo.toml  Dockerfile  README.md
crates/mock-relayer/src/: handlers.rs  main.rs  mock_proofs.rs  models.rs
docs/: README.md  economic-model.md  email-verification-flows.md  local-development.md  protocol-overview.md  spec.md  technical-architecture.md  vision-and-ux.md
frontend/: DEPLOYMENT.md  Dockerfile.dev  README.md  next.config.js  package.json  vercel.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: DevTools.tsx  Providers.tsx
frontend/src/config/: chains.ts  wagmi.ts
frontend/src/contracts/abis/: ReservationEscrow.json  ReservationMarketplace.json  ReservationVerifier.json
frontend/src/hooks/: useMockRelayer.ts  useReservationEscrow.ts  useReservationMarketplace.ts
scripts/: deploy-local.sh
