[package]
name = "mock-relayer"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Ethereum
ethers = { workspace = true }
hex = { workspace = true }

# Time
chrono = { workspace = true }

# Environment
dotenv = { workspace = true }

# UUID for generating unique IDs
uuid = { version = "1.8", features = ["v4", "serde"] }

# Random number generation
rand = "0.8" 